--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "src/bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run": "nodemon src/bot.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/voice": "^0.11.0",
-    "discord.js": "^14.1.1",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "eris": "^0.17.1"
   }
 }
